# BESkills

./: .gitignore  README.md  mcp.json
backend-development/: SKILL.md
backend-development/core/: backend-mindset.md  backend-project-structure.md  backend-technologies.md
backend-development/extensions/configuration/: SKILL.md
backend-development/patterns/concurrency/: SKILL.md
backend-development/patterns/dependency/: SKILL.md
backend-development/references/: backend-api-design.md  backend-architecture.md  backend-code-quality.md  backend-performance.md  backend-security.md  backend-technologies.md  backend-testing.md
code-review/: SKILL.md
code-review/prompts/: review-and-post-pr.md
code-review/references/: checklists.md  pr-comment-format.md
csharp/core/: backend-authentication.md  backend-code-quality.md  backend-devops.md  backend-security.md
mcp/code_reviewer/: .gitignore  README.md  pyproject.toml  run.py  server.py  validation.py
mcp/code_reviewer/providers/: __init__.py  aws.py  azure_devops.py  base.py  github.py  token_store.py
ui/: package-lock.json
ui/src/: App.css  App.tsx
