[project]
name = "code-reviewer-mcp"
version = "0.1.0"
description = "MCP server to post PR review comments to Azure DevOps, GitHub, and AWS CodeCommit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0,<3.0.0",
    "mcp>=1.12.0,<2.0.0",
    "uv>=0.6.3,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.30.0",

]

[tool.uv]
dev-dependencies = []
