[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-reviewer-mcp"
version = "0.2.0"
description = "MCP server to post PR review comments and approve pull requests (Azure DevOps, GitHub, AWS CodeCommit)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "BESkills" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "code-review",
    "pull-request",
    "azure",
    "github",
    "pr-comments",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "fastmcp>=2.10.0,<3.0.0",
    "mcp>=1.12.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/khanhct/BESkills"
Repository = "https://github.com/khanhct/BESkills"
Documentation = "https://github.com/khanhct/BESkills/tree/main/mcp/code_reviewer"

[project.scripts]
code-reviewer-mcp = "server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*"]

[tool.setuptools]
py-modules = ["validation", "server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
